--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
     "webpack": "^2.4.1"
   },
   "dependencies": {
