--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "./node_modules/.bin/webpack",
     "lint": "./node_modules/.bin/eslint",
+    "lintall": "./node_modules/.bin/eslint client/ server.js",
     "start": "./node_modules/.bin/babel-node server.js && open 'http://localhost:8888/'"
   },
   "author": "zeke wander",
