--- a/package.json
+++ b/package.json
@@ -15,18 +15,36 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
-    "eslint": "^3.19.0",
-    "eslint-plugin-react": "^6.10.3",
-    "webpack": "^2.4.1"
-  },
-  "dependencies": {
     "babel-plugin-inferno": "^3.2.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "express": "^4.15.2",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "browser-sync": "^2.18.8",
+    "chai": "^3.5.0",
+    "enzyme": "^2.8.2",
+    "eslint": "^3.19.0",
+    "eslint-plugin-inferno": "^6.10.4",
+    "eslint-plugin-react": "^6.10.3",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-file-cache": "^0.0.1",
+    "gulp-mocha": "^4.3.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-watch": "^4.3.11",
     "html-webpack-plugin": "^2.28.0",
+    "inferno-test-utils": "^3.0.6",
+    "jsdom": "^10.0.0",
+    "mocha": "^3.3.0",
+    "react-test-renderer": "^15.5.4",
+    "webpack": "^2.4.1"
+  },
+  "dependencies": {
+    "express": "^4.15.2",
     "inferno": "^3.0.5",
+    "jquery": "^3.2.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   }
