--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
   },
   "dependencies": {
     "express": "^4.15.2",
+    "ffmetadata": "^1.4.0",
     "inferno": "^3.0.5",
     "jquery": "^3.2.1",
+    "morgan": "^1.8.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   }
