--- a/package.json
+++ b/package.json
@@ -33,12 +33,16 @@
     "gulp-file-cache": "^0.0.1",
     "gulp-mocha": "^4.3.1",
     "gulp-nodemon": "^2.2.1",
+    "gulp-stylelint": "^3.9.0",
+    "gulp-stylus": "^2.6.0",
     "gulp-watch": "^4.3.11",
     "html-webpack-plugin": "^2.28.0",
     "inferno-test-utils": "^3.0.6",
     "jsdom": "^10.0.0",
     "mocha": "^3.3.0",
     "react-test-renderer": "^15.5.4",
+    "stylelint": "^7.10.1",
+    "stylus": "^0.54.5",
     "webpack": "^2.4.1"
   },
   "dependencies": {
