--- a/package.json
+++ b/package.json
@@ -39,6 +39,13 @@
     "html-webpack-plugin": "^2.28.0",
     "inferno-test-utils": "^3.0.6",
     "jsdom": "^10.0.0",
+    "karma": "^1.7.0",
+    "karma-chai-plugins": "^0.9.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
     "mocha": "^3.3.0",
     "react-test-renderer": "^15.5.4",
     "stylelint": "^7.10.1",
@@ -47,13 +54,14 @@
     "webpack": "^2.4.1"
   },
   "dependencies": {
-    "blob-util": "^1.2.1",
+    "base64-js": "^1.2.0",
     "express": "^4.15.2",
     "ffmetadata": "^1.4.0",
     "inferno": "^3.0.5",
     "jquery": "^3.2.1",
     "morgan": "^1.8.1",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "walk": "^2.3.9"
   }
 }
