--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "karma": "^1.7.0",
     "karma-chai-plugins": "^0.9.0",
     "karma-chrome-launcher": "^2.1.1",
+    "karma-html-reporter": "^0.2.7",
     "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.3",
