--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "gulp-mocha": "^4.3.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-stylelint": "^3.9.0",
-    "gulp-stylus": "^2.6.0",
+    "gulp-validated-src": "^1.0.0",
     "gulp-watch": "^4.3.11",
     "html-webpack-plugin": "^2.28.0",
     "inferno-test-utils": "^3.0.6",
@@ -52,7 +52,6 @@
     "mocha": "^3.3.0",
     "react-test-renderer": "^15.5.4",
     "stylelint": "^7.10.1",
-    "stylus": "^0.54.5",
     "supertest": "^3.0.0",
     "webpack": "^2.4.1"
   },
@@ -60,6 +59,7 @@
     "base64-js": "^1.2.0",
     "express": "^4.15.2",
     "ffmetadata": "^1.4.0",
+    "gulp-sass": "^3.1.0",
     "inferno": "^3.0.5",
     "jquery": "^3.2.1",
     "morgan": "^1.8.1",
