--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "express": "^4.15.2",
     "ffmetadata": "^1.4.0",
     "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0",
     "inferno": "^3.0.5",
     "jquery": "^3.2.1",
     "morgan": "^1.8.1",
