--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mocha": "^3.3.0",
     "react-test-renderer": "^15.5.4",
     "stylelint": "^7.10.1",
+    "stylelint-config-standard": "^17.0.0",
     "supertest": "^3.0.0",
     "webpack": "^2.4.1"
   },
