--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-mocha": "^4.3.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-stylelint": "^3.9.0",
+    "gulp-task-listing": "^1.0.1",
     "gulp-validated-src": "^1.0.0",
     "gulp-watch": "^4.3.11",
     "html-webpack-plugin": "^2.28.0",
