--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "karma": "^1.7.0",
     "karma-chai-plugins": "^0.9.0",
     "karma-chrome-launcher": "^2.1.1",
+    "karma-coverage": "^1.1.1",
     "karma-html-reporter": "^0.2.7",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.3",
