--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
-  "presets": [
-    "es2015", "react"
-  ]
-  //,"plugins": ["inferno"]
+  'env': {
+    'test': {
+      'plugins': ['istanbul']
+    }
+  },
+  'presets': ['es2015', 'react', 'stage-3']
 }
