--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-register": "^6.24.1",
     "browser-sync": "^2.18.8",
     "chai": "^3.5.0",
+    "chromedriver": "^2.31.0",
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-plugin-inferno": "^6.10.4",
@@ -55,6 +56,7 @@
     "karma-webpack": "^2.0.3",
     "mocha": "^3.3.0",
     "react-test-renderer": "^15.5.4",
+    "selenium-webdriver": "^3.5.0",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^17.0.0",
     "supertest": "^3.0.0",
