--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "karma-webpack": "^2.0.3",
     "mocha": "^3.3.0",
     "react-test-renderer": "^15.5.4",
+    "run-sequence": "^2.1.0",
     "selenium-webdriver": "^3.5.0",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^17.0.0",
