wrote first substantive integration test

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^3.19.0",
     "eslint-plugin-inferno": "^6.10.4",
     "eslint-plugin-react": "^6.10.3",
+    "fs-extra": "^4.0.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-eslint": "^3.0.1",
@@ -73,6 +74,7 @@
     "gulp-sourcemaps": "^2.6.0",
     "inferno": "^3.0.5",
     "jquery": "^3.2.1",
+    "mkdirp": "^0.5.1",
     "morgan": "^1.8.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
